# COMS30115-assignment-01

./: CMakeLists.txt
Source/: SDLauxiliary.cpp  SDLauxiliary.h  assignment_01.cpp  assignment_01_test.cpp  drawing.cpp  drawing.h  main_colour_wheel.cpp  main_solid_colour.cpp  main_starfield.cpp  project_test.cpp  skeleton.cpp
